hphp/test/slow/type_constraint/int_type_with_null_default_bad.php.expectf
Catchable fatal error: Argument 1 passed to foo() must be an instance of int, null given in %s on line 9
